--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ django-environ==0.9.0
 django-filter==23.2
 djangorestframework==3.14.0
 Markdown==3.4.4
+psycopg2==2.9.5
 pytz==2023.3
 sqlparse==0.4.4
 typing_extensions==4.7.1
