--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==4.2.4
 django-environ==0.9.0
 django-filter==23.2
 djangorestframework==3.14.0
+gunicorn==20.1.0
 Markdown==3.4.4
 psycopg2==2.9.5
 pytz==2023.3
