--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,17 @@ Django==4.2.4
 django-cors-headers==4.2.0
 django-environ==0.9.0
 django-filter==23.2
+django-sendgrid-v5==1.2.2
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 gunicorn==20.1.0
 Markdown==3.4.4
 psycopg2==2.9.5
 PyJWT==2.8.0
+python-http-client==3.3.7
 pytz==2023.3
+sendgrid==6.10.0
 sqlparse==0.4.4
+starkbank-ecdsa==2.2.0
 typing_extensions==4.7.1
 tzdata==2023.3
